# FAFR

./: .gitignore  CMakeLists.txt  README.md  fafr.cpp
ffmpeg_patches/: 0001-add-fafr-demuxer-decoder.patch  README.md
include/: fafr_lib.h
macos/: FafrAudioFileComponent.cpp  FafrComponent.cpp  Info.plist
src/: fafr_lib.cpp
tools/: fafr_diag.cpp
